test-suite/failure/universes.v
Definition Type2 := Type.
Definition Type1 : Type2 := Type.
Fail Definition Inconsistency : Type1 := Type2.
